# Ransomware

./: .gitignore  README.md  ingest.md
RustLock/: Cargo.toml  README.md  build.rs  compile.py
RustLock/keys/: private_key.pem  public_key.pem
RustLock/src/: antireversing.rs  config.rs  lib.rs  locker.rs  unlocker.rs
RustLock/src/cypher/: config.rs  cypher.rs  ftp.rs  lib.rs  mod.rs  walker.rs
RustLock/src/decypher/: decypher.rs  mod.rs  walker.rs
RustLock/tests/: keys_cycle.rs
RustLock/tests/assets/: plain.txt
server/: README.md
server/ClearService/: Dockerfile  api.py  install.sh  readme.md
server/HiddenService/: install.sh  readme.md
server/HiddenService/backend/: README.md  api.py  servers.txt
server/HiddenService/conf/: nginx
server/HiddenService/frontend/: README.md
server/HiddenService/frontend/public/: index.html
server/HiddenService/frontend/src/: Posts.css  Posts.js
