[package]
name = "rustlock"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true

[[bin]]
name = "locker"
path = "src/locker.rs"

[[bin]]
name = "unlocker"
path = "src/unlocker.rs"

[dependencies]
rsa = "0.9"
rand = "0.8"
rand_core="0.6.4"
sha2 = "0.10"
digest = "0.10.7"
ring = "0.17" 
hex = "0.4"
passwords = "3.1.16"
base64 = "0.20.0"
suppaftp = "6.0.7"

[build-dependencies]
rsa = "0.9"
base64 = "0.20.0"
hex = "0.4"
rand = "0.8"
rand_core="0.6.4"
sha2 = "0.10"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi","securitybaseapi", "winbase", "winerror", "fileapi", "errhandlingapi", "wincrypt", "handleapi", "minwindef", "winnt", "processthreadsapi", "debugapi", "sysinfoapi", "winuser", "minwinbase", "synchapi", "windef", "psapi", "winsvc"]}
widestring = "*"





